# hscode-mapping

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  example.ipynb  explore_modules.ipynb  known_issues.md  notes.md  pipeline.py  pyproject.toml  run_classification.sh  run_init.py  run_pipeline.py  run_splitter.py
archive/: pipeline.py
hs_classifier/: __init__.py  evaluator.py  init_lookup_index.py  labeler.py  llm.py  reranker.py  retrieval.py  search_terms.py  splitter.py  translator.py
instructions/: search_terms.md
linkages/: build_query.py  config.py  init_lookup_index.py  reranker.py  retrieval.py  search_terms.py  translator.py
modules/: config.py  evaluator.py  llm.py  lookup_index.py  reranker.py  retrieval.py  search_terms.py
scripts/: 1_generate_embeddings.py  2_classify.py  run_classification.sh
src/linkages/: __init__.py  config.py  embeddings.py  pipeline.py  rerank.py  retrieval.py  utils.py
