[project]
name = "hs-classifier"
version = "0.1.0"
description = "LLM-powered product-to-HS-code classification pipeline"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "sentence-transformers>=5.0.0",
    "polars>=1.31.0",
    "python-dotenv>=1.0.0",
    "translators>=5.9.9",
    "lingua-language-detector>=1.4.2",
    "fire>=0.7.1",
    "connectorx>=0.4.5",
    "pyarrow>=23.0.1",
    "instructor>=1.14.5",
    "google-genai>=1.68.0",
    "jsonref>=1.1.0",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
