[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hs-classifier"
version = "0.1.0"
description = "LLM-powered product-to-HS-code classification pipeline"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "sentence-transformers>=5.0.0",
    "polars>=1.31.0",
    "python-dotenv>=1.0.0",
    "translators>=5.9.9",
    "lingua-language-detector>=1.4.2",
    "fire>=0.7.1",
    "connectorx>=0.4.5",
    "pyarrow>=23.0.1",
    "instructor>=1.14.5",
    "jsonref>=1.1.0",
    "hdbscan>=0.8.41",
    "umap-learn>=0.5.11",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.86.0"]
google = ["google-genai>=1.68.0"]
openai = ["openai>=1.82.0"]
cohere = ["cohere>=5.15.0"]
all = ["anthropic>=0.86.0", "google-genai>=1.68.0", "openai>=1.82.0", "cohere>=5.15.0"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.15.7",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# E = pycodestyle errors, F = pyflakes, I = isort (import sorting), W = warnings

[tool.ruff.lint.per-file-ignores]
# imports must come after load_dotenv() / warnings setup in these files
"hs_classifier/__init__.py" = ["E402"]
"run_init.py" = ["E402"]
"run_pipeline.py" = ["E402"]
"run_splitter.py" = ["E402"]
